fixing layout for new logo on mobile screens.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,6 +7,9 @@
 
 
 
+.welcomeProjectsTitle {
+  margin-bottom:20px;
+}
 
  a, a:hover, a:active, a:focus, a:visited {
   outline: none;
@@ -365,6 +368,10 @@ cursor: pointer;
 
 @media screen and (max-width:991px) and (min-width: 768px){
 
+.welcomeProjectsTitle {
+  margin-bottom: 10px;
+}
+
 .row2{
   margin-left: 5px;
 }
@@ -458,6 +465,9 @@ cursor: pointer;
 
 @media screen and (max-width:1199px) and (min-width: 992px){
   
+.welcomeProjectsTitle {
+  margin-bottom: 20px;
+}
 
 .voz{
   text-align: center;
@@ -705,34 +715,37 @@ cursor: pointer;
 
 
 }
-.col-md-4 3{
-  
--webkit-box-ordinal-group: 3;
+  .col-md-4 3 {
+    -webkit-box-ordinal-group: 3;
     -moz-box-ordinal-group: 3;
     -ms-flex-order: 3;
     -webkit-order: 3;
     order: 3;
+  }
 
-}
-.text3{
-  
-  color:white;
-  padding-left: 20px;
-  border-left: 1px solid white;
-  position:absolute; 
-  font-size:18px; 
-  margin-left:2%;
-  margin-right:3%;
-  } 
-.projectPic {
-  background: no-repeat url("/assets/img/lionel.jpg");
-  background-size: cover;
-  background-position: center;
-  width: 360px;
-  height: 300px;
-  margin: auto;
-  border: solid 1px white;
-  transition: width 0.2s; }
+  .text3 {
+    color:white;
+    padding-left: 20px;
+    border-left: 1px solid white;
+    position:absolute; 
+    font-size:18px; 
+    margin-left:2%;
+    margin-right:3%;
+  }
 
+  .projectPic {
+    background: no-repeat url("/assets/img/lionel.jpg");
+    background-size: cover;
+    background-position: center;
+    width: 360px;
+    height: 300px;
+    margin: auto;
+    border: solid 1px white;
+    transition: width 0.2s; 
+  }
+
+  .welcomeProjectsTitle {
+    margin-bottom: 10px;
+  }
 
 }
